--- a/home.css
+++ b/home.css
@@ -7,112 +7,113 @@
 
     /*header*/
     header{
-        width: 100%; /*changed*/
-        height: 50px; /*changed*/
-        display: flex; /*changed*/
-        justify-content: space-between; /*changed*/
-        align-items: center; /*changed*/
-        padding-top: 2rem; /*changed*/
+        width: 100%; 
+        height: 50px; 
+        display: flex; 
+        justify-content: space-between; 
+        align-items: center; 
+        padding-top: 2rem; 
     }
 
-    }
+    
     .line{
-        width: 45%; /*changed*/
-        height: 1px; /*changed*/
-        margin-top: 2rem; /*changed*/
-        background-color: #a2a3a8; /*changed*/
-        z-index: 1000; /*changed*/
-        margin-right: -10rem; /*changed*/
+        width: 45%; 
+        height: 1px; 
+        margin-top: 2rem; 
+        background-color: #a2a3a8; 
+        z-index: 1000; 
+        margin-right: -10rem; 
     }
 
     /*nav*/
     .hamburger-open,
     .hamburger-close{
-        display: none; /*changed*/
+        display: none; 
     }
 
     nav{
-        width: 45%; /*changed*/
-        height: 70px; /*changed*/
-        display: flex; /*changed*/
-        flex-direction: column; /*changed*/
-        align-items: flex-end; /*changed*/
-        justify-content: center; /*changed*/
-        padding-top: 2rem; /*changed*/
+        width: 45%; 
+        height: 70px; 
+        display: flex; 
+        flex-direction: column; 
+        align-items: flex-end; 
+        justify-content: center; 
+        padding-top: 2rem; 
     }
     .menu {
-        width: 100%; /*changed*/
-        height: auto; /*changed*/
-        display: flex; /*changed*/
-        justify-content: space-between; /*changed*/
-        align-items: center;/*changed*/
-        padding: 2rem 4rem 3.3rem 4rem; /*changed*/
+        width: 100%; 
+        height: auto; 
+        display: flex; 
+        justify-content: space-between; 
+        align-items: center;
+        padding: 2rem 4rem 3.3rem 4rem; 
     }
 
     .menu li a {
-        display: block;/*changed*/
-        padding: 2rem .5rem 2rem .5rem; /*changed*/
-        margin-top: 1rem; /*changed*/
-        background-color: rgba(60, 60, 61, .5); /*changed*/
+        display: block;
+        padding: 2rem .5rem 2rem .5rem; 
+        margin-top: 1rem; 
+        background-color: rgba(60, 60, 61, .5); 
     }
     
     .menu li a:hover {
-        padding: 2rem .5rem 1.6rem .5rem; /*changed*/
-        transition: none; /*changed*/
-        border-bottom: 4px solid #ffffff;/*changed*/
-        border-bottom-style: 2rem; /*changed*/
+        padding: 2rem .5rem 1.6rem .5rem; 
+        transition: none; 
+        border-bottom: 4px solid #ffffff;
+        border-bottom-style: 2rem; 
     }
 
     /*content-section*/
     .content-section{
-        padding: 48px; /*change*/
-        text-align: left;/*change*/
-        display: flex; /*changed*/
-        justify-content: space-between; /*changed*/
-        align-items: center; /*changed*/
+        padding: 48px; 
+        text-align: left;
+        display: flex; 
+        justify-content: space-between; 
+        align-items: center; 
     }
     .about-space__container{
-        width: 60%; /*changed*/
-        height: 400px; /*changed*/
-        padding: 0; /*change*/
+        width: 60%; 
+        height: 400px; 
+        padding: 0; 
     }
 
     .title-space{
-        margin: 3rem 0; /*changed*/
+        margin: 3rem 0; 
     }
 
     .title-space h1{
-        font-size: 15rem;  /*changed*/
+        font-size: 15rem;  
     }
     
     .explore-text{
-        width: 400px; /*changed*/
-        line-height: 3rem; /*changed*/
-        padding: 0; /*changed*/
+        width: 400px; 
+        line-height: 3rem; 
+        padding: 0; 
     }
 
     .explore-text p{   
-        font-size: 2rem; /*changed*/
+        font-size: 2rem; 
     }
 
     .explore-link-div{ 
-        width: 30%; /*changed*/
-        height: 30rem; /*changed*/
-        padding: .5rem; /*changed*/
-        margin-top: 15rem; /*changed*/
-        display: flex; /*changed*/
-        flex-direction: column; /*changed*/
-        align-items: center; /*changed*/
-        justify-content: flex-end; /*changed*/
+        width: 30%; 
+        height: 30rem; 
+        padding: .5rem; 
+        margin-top: 15rem; 
+        display: flex; 
+        flex-direction: column; 
+        align-items: center; 
+        justify-content: flex-end; 
         /* align-self: flex-end; */
         /* position: relative; */
     }
     .explore-link-div a{
-        font-size: 3rem; /*changed*/
-        padding: 9rem 3.5rem; /*changed*/
-        position: relative; /*changed*/
-        top: 0; /*changed*/
-        left: 0; /*changed*/
-        transform: translate(0%, 0%); /*changed*/
+        font-size: 3rem; 
+        padding: 9rem 3.5rem; 
+        position: relative; 
+        top: 0; 
+        left: 0; 
+        transform: translate(0%, 0%); 
     }
+
 }
