--- a/styles.css
+++ b/styles.css
@@ -311,3 +311,81 @@ main{
         padding: 11rem 5rem; /*changed*/
     }
 }
+
+@media screen and (min-width: 992px){
+    body{
+        padding: 0;
+        background-image: url("./images/home/background-home-desktop.jpg");
+    }
+
+    .line{
+        width: 45%; 
+        height: 1px; 
+        margin-top: 2rem; 
+        background-color: #a2a3a8; 
+        z-index: 1000; 
+        margin-right: -10rem; 
+    }
+
+    nav{
+        width: 45%; 
+    }
+
+    /*content-section*/
+    .content-section{
+        padding: 48px; 
+        text-align: left;
+        flex-direction: row;
+    }
+
+    .about-space__container{
+        width: 60%; 
+        height: auto; 
+        padding: 0; 
+    }
+
+    .title-intro{
+        margin-top: 12rem;
+    }
+
+    .title-space{
+        margin: 1rem 0; /*changed*/
+    }
+
+    .title-space h1{
+        font-size: 15rem; 
+        margin: 2rem 0; 
+    }
+   
+    .explore-text{
+        width: 400px; 
+        /* line-height: 1rem;  */
+        padding: 0; 
+    }
+
+    .explore-text p{   
+        font-size: 2rem; 
+        line-height: 3.5rem;
+    }
+
+    .explore-link-div{ 
+        width: 30%; 
+        height: 30rem; 
+        padding: .5rem; 
+        margin-top: 12rem; 
+        display: flex; 
+        flex-direction: column; 
+        align-items: center; 
+        justify-content: flex-end; 
+        /* align-self: flex-end; */
+        /* position: relative; */
+    }
+    .explore-link-div a{
+        font-size: 3rem; 
+        padding: 9rem 3.5rem; 
+        position: relative; 
+        top: 0; 
+        left: 0; 
+        transform: translate(0%, 0%); 
+    }
+}
