--- a/destination-moon-styles.css
+++ b/destination-moon-styles.css
@@ -12,7 +12,7 @@ html{
 
 body{
     box-sizing: border-box;
-    background-image: url("./images/home/background-home-mobile.jpg");
+    background-image: url("./images/destination/background-destination-mobile.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 100vh;
@@ -111,99 +111,143 @@ fonts{
     border-bottom: 1px solid #ffffff;
 }
 
-/******Center-contents*******/
-main{
-    width: 100%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-}
-.content-section{
-    padding: 1rem;
-    margin-top: 1rem;
-    text-align: center;
-}
-.about-space__container{
-    padding: 1rem;
+/* ----Content-section----- */
+
+.main{
+    
 }
 
-.title-intro h5{
-    color: #d0d6f9;
-    font-size: 3rem;
-    margin-top: 5rem;
-    line-height: 4.75px;
-    font-family: 'Barlow Condensed', sans-serif;
+.section-center{
+    padding: 1rem;
+    display: grid;
+    place-items: center;
 }
-.title-space h1{
-    margin: 5rem 0;
+
+.section-center{
+    padding: 1rem;
+    display: grid;
+    place-items: center;
+    min-height: 100vh;
+}
+
+.title_pick-desti{
+    /* margin: 2rem 0 1.5rem 0; */
     color: #ffffff;
-    font-size: 10rem ;
+    font-size: 1.6rem; 
+    letter-spacing: 3px;
+    line-height: 4.75px;
+    overflow-wrap: break-word; 
+    text-align: left; 
+    font-weight: lighter;
+    text-transform: uppercase;
     font-family: 'Barlow Condensed', sans-serif;
 }
 
-.explore-text{
-    padding: 0 2.6rem;
+.moon-img{
+    width: 20rem;
+    height: 20rem;
+    /* margin: 1rem 0; */
 }
 
-.explore-text p{
-    color: #d0d6f9;
-    font-size: 2rem;
+.number-one{
+    color: #a2a3a8;
+    font-size: 1.6rem; 
+    letter-spacing: 3px;
 }
 
-.explore-link-div{
-    width: 95%;
-    height: 25rem;
-    padding: .5rem;
-    position: relative;
+.planet-menu{
+    /* margin: 1rem 0 2rem 0; */
 }
-.explore-link-div a{
-    font-size: 2rem;
-    margin-top: 1rem;
-    color: #0b0d17;
+
+.planet-menu a{
+    color: #a2a3a8;
     text-decoration: none;
     text-transform: uppercase;
-    padding: 6rem 2.5rem;
-    border-radius: 100%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #ffffff;
-} 
-
-.explore-link-div a:hover{
-    background-color: #d0d6f9;
-    transition: all .3s linear;
+    font-weight: 500;
+    font-size: 1.5rem;
+    margin: 0 1rem 0 1rem;
+    padding: .7rem 0;
+    position: relative;
 }
+
+.planet-menu a:hover {
+    color: #ffffff;
+}
+
+.planet-menu a:hover::after{
+    content: '';
+    position: absolute;
+    width: 70%;
+    height: 0.3rem;
+    left: 0;
+    bottom: 0;
+    background-color: #ffffff;
+}
+
+.title-moon{
+    font-size: 5rem;
+    color: #ffffff;
+    text-transform: uppercase;
+    font-weight: lighter;
+    letter-spacing: .5rem;
+}
+
+.moon-text{
+    width: 80%;
+    text-align: center;
+}
+
+.moon-text p{
+    font-size: 1.3rem;
+    color: #a2a3a8;
+    line-height: 2rem;
+}
+
+.horizontal-line{
+    width: 100%; 
+    height: 2.8px; 
+    /* margin: 1.5rem 0;  */
+    background-color: rgb(162, 163, 168, .1);
+    border-radius: 30%; 
+}
+
+.title-distance{
+    letter-spacing: 2px;
+    font-size: 1.5rem;
+    color: #a2a3a8;
+    font-weight: 200;
+    text-transform: uppercase;
+}
+
+.title-km{
+    font-weight: 200;
+    /* margin: 1.5rem 0; */
+    font-size: 3rem;
+    color: #ffffff;
+    text-transform: uppercase;
+}
+
+.title-travel{
+    font-weight: 200;
+    font-size: 1.5rem;
+    letter-spacing: 2px;
+    color: #a2a3a8;
+    text-transform: uppercase;
+}
+
+.title-days{
+    font-weight: 200;
+    font-size: 3rem;
+    color: #ffffff;
+    margin-top: 1.5rem;
+    text-transform: uppercase;
+}
+
 
 @media screen and (max-width:375px){
 
-    .main{
-        width: 100%;
-    }
-
-    .title-intro h5{  
-        line-height: 3rem; 
-        margin-top: 2rem; 
-        font-size: 2.8rem; 
-        overflow-wrap: break-word; 
-        text-align: left; 
-    }
-
-    .title-space h1{
-        margin: 2rem 0; 
-    }
-
-    .explore-link-div{
-        height: 15rem; 
-    }
-
-    .explore-link-div a{
-        margin-top: 2.5rem; 
-        padding: 6rem 2.5rem; 
-    }
 }
+
 
 @media screen and (min-width: 768px){
     body{
@@ -258,47 +302,8 @@ main{
         border-bottom: 4px solid #ffffff;
         border-bottom-style: 2rem; 
     }
-
-    .content-section{
-        padding: 48px; 
-        text-align: center;
-        display: flex; 
-        justify-content: center; 
-        align-items: center; 
-        flex-direction: column;
-    }
-
-    .title-intro{
-        margin-top: 15rem;
-    }
-
-    .title-space{
-        margin: 3rem 0; 
-    }
-
-    .title-space h1{
-        font-size: 15rem;  
-    }
-    
-    .explore-text{
-        line-height: 3rem; 
-        padding: 0; 
-    }
-
-    .explore-text p{   
-        font-size: 3rem; 
-        line-height: 5rem; 
-    }
-
-    .explore-link-div{ 
-        margin-top: 5rem; 
-    }
-
-    .explore-link-div a{
-        font-size: 3rem; 
-        padding: 11rem 5rem; 
-    }
 }
+
 
 @media screen and (min-width: 992px){
     /*Styles for HOME (Index.html)*/
@@ -318,60 +323,5 @@ main{
 
     nav{
         width: 45%; 
-    }
-
-    /*content-section*/
-    .content-section{
-        padding: 48px; 
-        text-align: left;
-        flex-direction: row;
-    }
-
-    .about-space__container{
-        width: 60%; 
-        height: auto; 
-        padding: 0; 
-    }
-
-    .title-intro{
-        margin-top: 12rem;
-    }
-
-    .title-space{
-        margin: 1rem 0; 
-    }
-
-    .title-space h1{
-        font-size: 15rem; 
-        margin: 2rem 0; 
-    }
-   
-    .explore-text{
-        width: 400px; 
-        padding: 0; 
-    }
-
-    .explore-text p{   
-        font-size: 2rem; 
-        line-height: 3.5rem;
-    }
-
-    .explore-link-div{ 
-        width: 30%; 
-        height: 30rem; 
-        padding: .5rem; 
-        margin-top: 12rem; 
-        display: flex; 
-        flex-direction: column; 
-        align-items: center; 
-        justify-content: flex-end; 
-    }
-    .explore-link-div a{
-        font-size: 3rem; 
-        padding: 9rem 3.5rem; 
-        position: relative; 
-        top: 0; 
-        left: 0; 
-        transform: translate(0%, 0%); 
     }
 }
