--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 100vh;
-    padding: 1rem;
+    /* padding: 1rem; */
     font-family: 'Barlow', sans-serif;
     position: relative;
 }
@@ -57,12 +57,11 @@ fonts{
 .hamburger-close{
     background: url("./images/shared/icon-close.svg");
     background-repeat: no-repeat;
-    display: none; /*use javascript to toggle*/
+    display: block; /*use javascript to toggle*/
+    position: absolute;
+    right: 0;
+    margin: 2rem;
 }
-
-/* .hamburger-icon-toggle{
-    display: block
-} */
 
 /* for harmburger-svg Hover */
 .hamburger-open:hover,
@@ -77,38 +76,58 @@ fonts{
 }
 
 /********menu section********/
-.menu {
+nav {
+    width: 65%;
     height: 0;
     overflow: hidden;
+    position: absolute;
+    right: 0;
+    top: 0;
     transition: all .3s ease;
-    background-color: rgba(60, 60, 61, .7); 
-    /* background-color: rgba(11, 13, 23, .7); */
+    background-color: rgba(51, 55, 70, .92);
     z-index: 1;
 }
 
 /* for JavaScript */
-.show-menu{
-    height: auto;  /*initially 10rem*/
+.show-nav{
+    height: 100%;  
+}
+
+.menu {
+    padding-left: 3rem;
+    margin-top: 8rem;
 }
 
 .menu li{
+    /* width: 90%; */
+    margin-top: 2rem;
     list-style-type: none;
 }
 
-.menu li a {
+.menu-link {
     text-decoration: none;
     color: #ffffff;
     font-size: 1.6rem;
     text-transform: uppercase;
     line-height: 1.6rem;
     display: block;
-    padding: .6rem 1rem;
+    padding: 1rem .2rem; 
+    letter-spacing: .3rem;
+    position: relative;
 }
 
-.menu li a:hover {
-    padding-left: 1.5rem;
+.menu-link:hover {
     transition: all .3s ease-in; 
-    border-bottom: 1px solid #ffffff;
+}
+
+.menu-link:hover::after{
+    content: '';
+    position: absolute;
+    width: 80%;
+    height: 0.3rem;
+    left: 0;
+    bottom: 0;
+    background-color: #ffffff;
 }
 
 /******Center-contents*******/
@@ -213,11 +232,14 @@ main{
     /*header*/
     header{
         width: 100%; 
-        height: 50px; 
+        height: 5rem;
         display: flex; 
         justify-content: space-between; 
         align-items: center; 
-        padding-top: 2rem; 
+    }
+
+    .header-items{
+        padding: 5rem 0 0 3rem;
     }
 
     /*nav*/
@@ -226,41 +248,54 @@ main{
         display: none; 
     }
 
+    .menu-numbers{
+        display: none;
+    }
+
     nav{
-        width: 80%; 
-        height: 70px; 
+        width: 65%; 
+        height: auto; 
         display: flex; 
         flex-direction: column; 
         align-items: flex-end; 
         justify-content: center; 
-        padding-top: 2rem; 
+        padding: 0;
+        transition: none;
+        overflow: none;
+        background-color: rgba(33, 36, 48, 0.92);
     }
 
     .menu {
         width: 100%; 
-        height: auto; 
         display: flex; 
         justify-content: space-between; 
         align-items: center;
-        padding: 2rem 4rem 3.3rem 4rem; 
+        padding: 0 1.5rem 0 1.5rem;
+        margin: 0;
     }
 
-    .menu li a {
-        display: block;
-        padding: 2rem .5rem 2rem .5rem; 
-        margin-top: 1rem; 
-        background-color: rgba(60, 60, 61, .5); 
+    .menu li{
+        margin-top: 0;
     }
 
-    .menu li a:hover {
-        padding: 2rem .5rem 1.6rem .5rem; 
+    .menu-link {
+        padding: 4.5rem 0;
+        line-height: 0;
+        border-bottom: 4px solid transparent;
+    }
+
+    .menu-link:hover {
         transition: none; 
         border-bottom: 4px solid #ffffff;
-        border-bottom-style: 2rem; 
     }
 
+    .menu-link:hover::after{
+        display: none;
+    }
+
+    /* center */
     .content-section{
-        padding: 48px; 
+        padding: 4.8rem; 
         text-align: center;
         display: flex; 
         justify-content: center; 
@@ -296,7 +331,7 @@ main{
 
     .explore-link-div a{
         font-size: 3rem; 
-        padding: 11rem 5rem; 
+        padding: 10rem 5rem; 
     }
 }
 
@@ -307,17 +342,40 @@ main{
         background-image: url("./images/home/background-home-desktop.jpg");
     }
 
+    header{
+        position: relative;
+    }
+
+    .header-items{
+        width: 10%;
+        padding: 5rem 0 0 3rem;
+    }
+
     .line{
-        width: 45%; 
+        width: 30%; 
         height: 1px; 
-        margin-top: 2rem; 
-        background-color: #a2a3a8; 
-        z-index: 1000; 
-        margin-right: -10rem; 
+        margin-top: 7rem;  
+        z-index: 999; 
+        position: absolute;
+        left: 15rem;
+        background-color: rgb(89, 90, 95);
+        /* margin-right: -10rem;  */
     }
 
     nav{
-        width: 45%; 
+        width: 60%; 
+        padding: 0 9rem;
+        margin-top: 3rem;
+    }
+
+    .menu-numbers{
+        display: inline-block;
+    }
+
+    .menu-link {
+        padding: 3rem 0;
+        font-size: 1.3rem;
+        margin-right: 1.5rem;
     }
 
     /*content-section*/
@@ -334,7 +392,7 @@ main{
     }
 
     .title-intro{
-        margin-top: 12rem;
+        margin-top: 22rem;
     }
 
     .title-space{
@@ -342,18 +400,18 @@ main{
     }
 
     .title-space h1{
-        font-size: 15rem; 
-        margin: 2rem 0; 
+        font-size: 11rem; 
+        margin: .5rem 0; 
     }
    
     .explore-text{
-        width: 400px; 
+        width: 380px; 
         padding: 0; 
     }
 
     .explore-text p{   
-        font-size: 2rem; 
-        line-height: 3.5rem;
+        font-size: 1.6rem; 
+        line-height: 2.5rem;
     }
 
     .explore-link-div{ 
