--- a/destination-titan-styles.css
+++ b/destination-titan-styles.css
@@ -272,6 +272,22 @@ nav {
     text-transform: uppercase;
 }
 
+
+.active{
+    color: white !important;
+}
+
+.active::after{
+    content: '';
+    position: absolute;
+    width: 70%;
+    height: 0.3rem;
+    left: 0;
+    bottom: 0;
+    background-color: #ffffff;
+}
+
+
 @media screen and (min-width: 390px){
     .menu-link{
         font-size: 1.6rem;
